# drawfinity

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile.frontend  Makefile  README.md  RELEASE-NOTES.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  docs.yml  release.yml
.maestro/autorun/: FEATURE-01-IndexedDB-Persistence.md  FEATURE-02-Selection-Tool.md  FEATURE-03-SVG-Export.md  FEATURE-04-Canvas-Images.md  FEATURE-05-Lua-Syntax-Highlighting.md  FEATURE-06-Turtle-REPL-Mode.md  (+2 more)
Auto Run Docs/: DOC_LOG_feature-documentation_2026-03-21.md  LOOP_00001_GAPS.md  LOOP_00001_PLAN.md  LOOP_00001_README_PLAN.md  LOOP_00002_DOC_REPORT.md  LOOP_00002_GAPS.md  LOOP_00002_PLAN.md  LOOP_00003_DOC_REPORT.md  LOOP_00003_GAPS.md  LOOP_00003_PLAN.md  LOOP_00004_DOC_REPORT.md  LOOP_00004_GAPS.md  LOOP_00004_PLAN.md
docs/: architecture.md  collaboration.md  cross-platform-notes.md  downloads.md  features.md  getting-started.md  index.md  server-setup.md  shortcuts.md  turtle-api.md  turtle-communication-test-scripts.md  turtle-exchange.md  turtle-graphics.md  turtle-scripts-pending.md
screenshots/: canvas.spec.ts  collab.spec.ts  gamification.spec.ts  helpers.ts  home.spec.ts  shapes.spec.ts  turtle.spec.ts  zoom.spec.ts
scripts/: generate-exchange-snapshot.mjs  pre-commit-crossplatform.sh
server/: Cargo.toml  Dockerfile
server/src/: api.rs  codec.rs  integration_tests.rs  main.rs  persistence.rs  room.rs  ws.rs  yrs_doc.rs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
(+286 files in other folders)
