[package]
name = "drawfinity-server"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
clap = { version = "4", features = ["derive", "env"] }
yrs = "0.21"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
